--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git"
   },
   "scripts": {
-    "start": "node_modules/.bin/babel-node --presets 'react,es2015,stage-0' src/server",
+    "start": "node src/server",
     "test": "jest -i",
     "test:watch": "jest --watch",
     "lint:css": "stylelint ./src/**/*.css",
@@ -22,19 +22,31 @@
     "babel-preset-es2015": "6.22.0",
     "babel-preset-react": "6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "css-loader": "^0.26.1",
     "eslint": "3.14.0",
     "eslint-config-airbnb": "14.0.0",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "3.0.2",
     "eslint-plugin-react": "6.9.0",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "file-loader": "^0.10.0",
+    "isomorphic-style-loader": "^1.1.0",
     "jest": "^18.1.0",
+    "postcss": "^5.2.13",
+    "postcss-cssnext": "^2.9.0",
+    "postcss-import": "^9.1.0",
+    "postcss-loader": "^1.3.0",
+    "postcss-reporter": "^3.0.0",
     "react-hot-loader": "^1.3.1",
+    "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1"
   },
   "dependencies": {
+    "babel-register": "^6.23.0",
     "compression": "1.6.2",
+    "css-modules-require-hook": "^4.0.5",
     "ejs": "^2.5.5",
     "express": "4.14.1",
     "file-loader": "0.10.0",
