--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "eslint-plugin-react": "6.9.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
-    "isomorphic-style-loader": "^1.1.0",
     "jest": "^18.1.0",
+    "morgan": "1.8.0",
     "postcss": "^5.2.13",
     "postcss-cssnext": "^2.9.0",
     "postcss-import": "^9.1.0",
@@ -41,23 +41,20 @@
     "postcss-reporter": "^3.0.0",
     "react-hot-loader": "^1.3.1",
     "style-loader": "^0.13.1",
+    "url-loader": "0.5.7",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1"
   },
   "dependencies": {
     "babel-register": "^6.23.0",
-    "compression": "1.6.2",
     "css-modules-require-hook": "^4.0.5",
     "ejs": "^2.5.5",
     "express": "4.14.1",
     "express-status-monitor": "0.1.9",
-    "file-loader": "0.10.0",
-    "morgan": "1.8.0",
     "react": "15.4.2",
     "react-dom": "15.4.2",
-    "react-router": "^3.0.2",
-    "url-loader": "0.5.7"
+    "react-router": "^3.0.2"
   },
   "jest": {
     "moduleNameMapper": {
