--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "remoto",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A new way for get your next remote job",
   "private": true,
   "repository": {
@@ -54,7 +54,8 @@
     "express-status-monitor": "0.1.9",
     "react": "15.4.2",
     "react-dom": "15.4.2",
-    "react-router": "^3.0.2"
+    "react-router": "^3.0.2",
+    "x-ray": "^2.3.1"
   },
   "jest": {
     "moduleNameMapper": {
