--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "remoto",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A new way for get your next remote job",
   "private": true,
   "repository": {
@@ -52,9 +52,11 @@
     "ejs": "^2.5.5",
     "express": "4.14.1",
     "express-status-monitor": "0.1.9",
+    "lowdb": "^0.15.5",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-router": "^3.0.2",
+    "uuid": "^3.0.1",
     "x-ray": "^2.3.1"
   },
   "jest": {
