--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "remoto",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A new way for get your next remote job",
   "private": true,
   "repository": {
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "babel-register": "^6.23.0",
+    "cron": "^1.2.1",
     "css-modules-require-hook": "^4.0.5",
     "ejs": "^2.5.5",
     "express": "4.14.1",
