--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "remoto",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "A new way for get your next remote job",
   "private": true,
   "repository": {
@@ -52,6 +52,7 @@
     "classnames": "^2.2.5",
     "cron": "^1.2.1",
     "css-modules-require-hook": "^4.0.5",
+    "dotenv": "^4.0.0",
     "ejs": "^2.5.5",
     "express": "4.14.1",
     "express-status-monitor": "0.1.9",
@@ -59,6 +60,7 @@
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-router": "^3.0.2",
+    "telebot": "^1.0.7",
     "uuid": "^3.0.1",
     "x-ray": "^2.3.1"
   },
