--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "global-require": "off",
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "react/jsx-filename-extension": "off",
-    "react/require-default-props": "off",
+    "react/forbid-prop-types": "off",
+    "react/require-default-props": "off"
   }
 }
