--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-react": "6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "css-loader": "^0.26.1",
+    "enzyme": "^2.7.1",
     "eslint": "3.14.0",
     "eslint-config-airbnb": "14.0.0",
     "eslint-plugin-import": "2.2.0",
@@ -32,6 +33,7 @@
     "eslint-plugin-react": "6.9.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "^0.10.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^18.1.0",
     "morgan": "1.8.0",
     "postcss": "^5.2.13",
@@ -39,8 +41,12 @@
     "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.0",
     "postcss-reporter": "^3.0.0",
+    "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "^1.3.1",
+    "react-test-renderer": "^15.4.2",
     "style-loader": "^0.13.1",
+    "stylelint": "^7.8.0",
+    "stylelint-config-standard": "^16.0.0",
     "url-loader": "0.5.7",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
