--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "remoto",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "A new way for get your next remote job",
   "private": true,
   "repository": {
@@ -65,6 +65,7 @@
     "express-status-monitor": "0.1.9",
     "firebase-admin": "^4.1.1",
     "lowdb": "^0.15.5",
+    "moment": "^2.17.1",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-router": "^3.0.2",
