--- a/package.json
+++ b/package.json
@@ -71,8 +71,10 @@
     "pm2": "^2.4.0",
     "react": "15.4.2",
     "react-dom": "15.4.2",
+    "react-markdown": "^2.4.4",
     "react-router": "^3.0.2",
     "telebot": "^1.0.7",
+    "to-markdown": "^3.0.3",
     "uuid": "^3.0.1",
     "x-ray": "^2.3.1"
   },
