--- a/package.json
+++ b/package.json
@@ -65,9 +65,9 @@
     "express": "4.14.1",
     "express-session": "^1.15.1",
     "express-status-monitor": "0.1.9",
-    "firebase-admin": "^4.1.1",
     "lowdb": "^0.15.5",
     "moment": "^2.17.1",
+    "mongoose": "^4.8.4",
     "pm2": "^2.4.0",
     "react": "15.4.2",
     "react-dom": "15.4.2",
